# drf-auth

./: README.rst  setup.cfg
drf_auth/: admin.py  app_settings.py  apps.py  auth.py  models.py  serializers.py  urls.py  utils.py  views.py
drf_auth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
drf_auth/migrations/: 0001_initial.py
drf_auth/signals/: handlers.py
