[metadata]
name = drf-auth
version = 0.1
description = A Django rest framework auth app
long_description = file: README.rst
url = https://www.lettoo.com/
author = Jeffrey Hu
author_email = zhiwehu@gmail.com
license = GNU GENERAL PUBLIC LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: PUBLIC LICENSE
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
    django-filter>=21.1
    django-model-utils>=4.2.0
    django-sendsms>=0.5
    djangorestframework>=3.13.1
    djangorestframework-simplejwt>=5.0.0
    Pillow>=9.0.0
    pytz>=2021.3